Change learner move score

--- a/configuration.json
+++ b/configuration.json
@@ -9,9 +9,10 @@
     "tau": 0.005,
     "noise_std": 0.2,
     "won_reward": 100,
-    "score_reward": 10,
+    "score_gain_reward": 10,
+    "score_loss_penalty": 20,
     "illegal_move_loss": 5,
-    "move_loss": 1,
+    "move_loss": 0,
     "buffer_capacity": 50000,
     "batch_size": 64,
     "actor_learning_rate": 0.001,
