Game should have maximum duration

--- a/configuration.json
+++ b/configuration.json
@@ -13,6 +13,7 @@
     "score_loss_penalty": 20,
     "illegal_move_loss": 5,
     "move_loss": 0,
+    "max_duration": 50,
     "buffer_capacity": 50000,
     "batch_size": 64,
     "actor_learning_rate": 0.001,
