--- a/configuration.json
+++ b/configuration.json
@@ -7,7 +7,9 @@
   "learner": {
     "gamma": 0.9,
     "tau": 0.005,
-    "noise_std": 0.1,
+    "start_noise": 0.5,
+    "noise_decay": 1e-4,
+    "min_noise": 0.1,
     "won_reward": 100,
     "score_gain_reward": 10,
     "score_loss_penalty": 20,
