--- a/configuration.json
+++ b/configuration.json
@@ -4,10 +4,11 @@
     "stack_capacity": 4,
     "extra_stacks": 2,
     "score_base": 3,
-    "won_reward": 10,
+    "won_reward": 100,
     "score_gain_reward": 1,
-    "score_loss_penalty": 0.5,
-    "illegal_move_loss": 0.7,
+    "score_loss_penalty": 1,
+    "illegal_move_loss": 5,
+    "score_change_rate": 0.001,
     "move_loss": 0.01
   },
   "learner": {
@@ -16,9 +17,9 @@
     "start_noise": 0.3,
     "noise_decay": 1e-4,
     "min_noise": 0.1,
-    "max_duration": 100,
+    "max_duration": 50,
     "buffer_capacity": 50000,
-    "batch_size": 64,
+    "batch_size": 128,
     "actor_learning_rate": 0.001,
     "critic_learning_rate": 0.002,
     "actor_inner_layer_neurons": 512,
