--- a/configuration.json
+++ b/configuration.json
@@ -21,9 +21,11 @@
     "buffer_capacity": 50000,
     "batch_size": 128,
     "actor_learning_rate": 0.001,
-    "critic_learning_rate": 0.002,
     "actor_inner_layer_neurons": 512,
-    "critic_inner_layer_neurons": 512
+    "actor_dropout_rate": 0.1,
+    "critic_learning_rate": 0.002,
+    "critic_inner_layer_neurons": 512,
+    "critic_dropout_rate": 0.1
   },
   "train": {
     "episodes": 100000,
