--- a/configuration.json
+++ b/configuration.json
@@ -22,10 +22,12 @@
     "buffer_capacity": 50000,
     "batch_size": 128,
     "actor_learning_rate": 0.001,
-    "actor_inner_layer_neurons": 512,
+    "actor_inner_layers_neurons": 256,
+    "actor_inner_layers": 3,
     "actor_dropout_rate": 0.1,
     "critic_learning_rate": 0.002,
-    "critic_inner_layer_neurons": 512,
+    "critic_inner_layers_neurons": 256,
+    "critic_inner_layers": 3,
     "critic_dropout_rate": 0.1,
     "scalars_window": 1000
   },
