Make noise into a class

--- a/configuration.json
+++ b/configuration.json
@@ -15,8 +15,8 @@
     "gamma": 0.9,
     "tau": 0.005,
     "tau_decay": 0,
-    "start_noise": 0.3,
-    "noise_decay": 1e-4,
+    "start_noise": 0.1,
+    "noise_decay": 0,
     "min_noise": 0.1,
     "max_duration": 50,
     "buffer_capacity": 50000,
