--- a/configuration.json
+++ b/configuration.json
@@ -12,27 +12,21 @@
     "move_loss": 0.01
   },
   "learner": {
-    "gamma": 0.9,
-    "tau": 0.005,
-    "tau_decay": 0,
-    "start_noise": 0.1,
-    "noise_decay": 0,
-    "min_noise": 0.1,
+    "discount": 0.9,
     "max_duration": 50,
     "buffer_capacity": 50000,
     "batch_size": 128,
-    "actor_learning_rate": 0.001,
-    "actor_inner_layers_neurons": 256,
-    "actor_inner_layers": 3,
-    "actor_dropout_rate": 0.1,
-    "critic_learning_rate": 0.002,
-    "critic_inner_layers_neurons": 256,
-    "critic_inner_layers": 3,
-    "critic_dropout_rate": 0.1,
-    "scalars_window": 1000
+    "learning_rate": 0.001,
+    "neurons_per_layer": 256,
+    "inner_layers": 3,
+    "drop_rate": 0.1,
+    "epsilon_decrease_rate": 0.9996,
+    "min_epsilon": 0.001
   },
   "train": {
-    "episodes": 300000,
+    "episodes": 100000,
+    "epsilon_update_start": 300,
+    "model_update_rate": 1000,
     "plot_window": 1000
   }
 }
